--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -54,7 +54,11 @@
 
     <string name="setup_im_dialog_remove_confirm">移除輸入法</string>
     <string name="setup_im_dialog_remove_confirm_message">您確定要移除輸入法資料表嗎 ?</string>
-    
+
+    <string name="setup_load_download">下載輸入法檔案</string>
+    <string name="setup_load_migrate_load">載入輸入法字根</string>
+    <string name="setup_load_migrate_import">匯入輸入法字根</string>
+
     <string name="default_menu_initial">設定輸入法</string>
     <string name="default_menu_related">管理關聯字庫</string>
 
