--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">萊姆輸入法</string>
     <string name="app_setting">設定萊姆輸入法</string>
 
+    <string name="vpon_banner_id">8a8081824cfe92fa014d3707f493630b</string>
+
     <!--<string name="ad_unit_interstitial">ca-app-pub-6429718170873338/5892033402</string>
     <string name="ad_unit_banner">ca-app-pub-6429718170873338/7028669804</string>-->
 
