--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="action_share">Share</string>
     <string name="action_settings">Settings</string>
 
     <string name="no_search_result">沒有任何符合的記錄</string>
@@ -85,6 +86,7 @@
     <string name="default_menu_related">管理關聯字庫</string>
 
     <string name="im_input_method">輸入法</string>
+    <string name="im_custom">自定義</string>
     <string name="im_array">行列</string>
     <string name="im_array10">行列10</string>
     <string name="im_cj">倉頡</string>
@@ -155,6 +157,13 @@
 
     <string name="manage_word_dialog_add">新增內容</string>
     <string name="manage_word_dialog_add_message">請問是否要新增記錄並離開?</string>
+
+
+    <string name="share_dialog_title">分享輸入法</string>
+    <string name="share_dialog_title_message">請問是否要匯出並分享輸入法字根檔?</string>
+
+    <string name="share_step_initial">準備資料中</string>
+    <string name="share_step_write">寫入暫存檔</string>
 
     <string name="help_dialog_title">使用說明</string>
     <string name="help_dialog_detail">
