--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -162,8 +162,8 @@
     <string name="share_dialog_title">分享輸入法</string>
     <string name="share_dialog_title_message">請問是否要匯出並分享輸入法字根檔?</string>
 
-    <string name="share_step_initial">準備資料中</string>
-    <string name="share_step_write">寫入暫存檔</string>
+    <string name="share_step_initial">準備資料中 ...</string>
+    <string name="share_step_write">寫入暫存檔 ...</string>
 
     <string name="help_dialog_title">使用說明</string>
     <string name="help_dialog_detail">
