--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="setup_im_related_custom">匯入關聯字庫</string>
 
     <string name="setup_im_dialog_title">安裝輸入法</string>
-    <string name="setup_im_dialog_custom">匯入自定義字根表</string>
+    <string name="setup_im_dialog_custom">匯入字根表</string>
 
     <string name="setup_im_dialog_title_remove">移除輸入法</string>
 
