--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -208,5 +208,8 @@
     <string name="error_import_db">匯入失敗，可能是檔案毀損或格式錯誤，請再試一次</string>
 
     <string name="error_set_active_im">請先下載輸入法或匯入字根檔</string>
+    <string name="title_activity_setup_im_google">SetupImGoogleActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 
 </resources>
