--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -161,6 +161,7 @@
     <string name="manage_word_code">字根</string>
     <string name="manage_word_code3r">三碼</string>
     <string name="manage_word_word">文字</string>
+    <string name="manage_word_score">顯示優先序</string>
 
     <string name="manage_select_keyboard">請選擇鍵盤</string>
 
