--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -83,6 +83,9 @@
     <string name="setup_im_restore_learning_data">還原輸入法選字喜好</string>
     <string name="setup_im_restore_learning_data_message">請問您是否要還原輸入法選字喜好 ?</string>
 
+    <string name="setup_load_download_dayiuni">安裝 Unicode 3+4 碼單字版</string>
+    <string name="setup_load_download_dayiunip">安裝 Unicode 3+4 碼詞庫版</string>
+
     <string name="setup_load_download">下載輸入法檔案</string>
     <string name="setup_load_migrate_load">準備輸入法字根</string>
     <string name="setup_load_migrate_import">匯入輸入法字根</string>
