--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -218,4 +218,8 @@
     <string name="error_set_active_im">請先下載輸入法或匯入字根檔</string>
     <string name="title_activity_setup_im_google">SetupImGoogleActivity</string>
 
+    <string name="smart_chinese_input">smart_chinese_input</string>
+    <string name="preference_smart_chinese_input">開啟中文智慧選字</string>
+    <string name="preference_smart_chinese_input_message">部份輸入法可能會影響中英混打功能</string>
+
 </resources>
