--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -134,8 +134,8 @@
     <string name="im_cj5">倉頡五代</string>
     <string name="im_dayi">大易</string>
     <string name="im_ecj">速成</string>
-    <string name="im_ez">輕鬆</string><!--
-    <string name="im_hs">華象直覺</string>-->
+    <string name="im_ez">輕鬆</string>
+    <string name="im_hs">華象直覺</string>
     <string name="im_phonetic">注音</string>
     <string name="im_phonetic_advanced">注音連打</string>
     <string name="im_pinyin">拼音</string>
@@ -233,17 +233,13 @@
 
         - 編輯輸入法字根\n
         - 編輯關聯字庫\n
-
         - 分享輸入法字庫\n
-
         - 快速備份還原\n
         - 更新雲端備份模組\n
         - 備份選字順序及喜好設定\n
-
         - 新增連打智慧選字\n
         - 提升輸入法查詢效率\n
         - 提升關聯字查詢效率\n
-
         - 平面化輸入法鍵盤顯示\n
         - 新增贊助、廣告移除模組\n\n
 
