--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -229,6 +229,13 @@
     <string name="help_dialog_detail">
         \n** 若文字無法正確輸入，建議您重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
 	    \n版本更新說明\n\n
+
+        5.0.2 版本更新\n\n
+
+        - 新增華象輸入法\n
+        - 修正匯入錯誤\n
+        - 修正字根查詢錯誤\n\n
+
         5.0.1 版本新功能\n\n
 
         - 編輯輸入法字根\n
