--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -230,27 +230,27 @@
         \n** 若文字无法正确输入，建议您重新下载或汇入字根档案, 如果选字与送出的字不同，请关闭喜好设定的中文简/繁体字码转换.\n
         \n版本更新说明\n\n
 
-        5.0.2 版本更新\n\n
+        5.0.5 版本更新\n\n
 
-        - 新增华象输入法\n
-        - 修正汇入错误\n
-        - 修正字根查询错误\n\n
+        - 新增键盘样式选择(黑色，请至设定变更)\n
+        - 调整文字查询效能\n
+        - 修正许式注音\n\n
 
-        5.0.1 版本新功能\n\n
+        5.x 版本新功能\n\n
 
-        - 编辑输入法字根\n
-        - 编辑关联字库\n
-        - 分享输入法字库\n
-        - 快速备份还原\n
-        - 更新云端备份模组\n
-        - 备份选字顺序及喜好设定\n
-        - 新增连打智慧选字\n
-        - 提升输入法查询效率\n
-        - 提升关联字查询效率\n
-        - 平面化输入法键盘显示\n
-        - 新增赞助、广告移除模组\n\n
+        - 编辑输入法字根\n
+        - 编辑关联字库\n
+        - 分享输入法字库\n
+        - 快速备份还原\n
+        - 更新云端备份模组\n
+        - 备份选字顺序及喜好设定\n
+        - 新增连打智慧选字\n
+        - 提升输入法查询效率\n
+        - 提升关联字查询效率\n
+        - 平面化输入法键盘显示\n
+        - 新增赞助、广告移除模组\n\n
 
-        感谢大易输入法发明者王赞杰先生，莱姆正式获得使用授权\n\n
+        感谢大易输入法发明者王赞杰先生，莱姆正式获得使用授权\n\n
 
         LIME中文输入法Facebook粉丝专页\n
         http://facebook.com/limeime/\n\n
