update app description

--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -230,6 +230,12 @@
         \n** 若文字无法正确输入，建议您重新下载或汇入字根档案, 如果选字与送出的字不同，请关闭喜好设定的中文简/繁体字码转换.\n
         \n版本更新说明\n\n
 
+        5.0.6 版本更新\n\n
+
+        - 软体键盘固定候选字列(移除浮动功能)\n
+        - 硬体键盘候选字列使用透明背景\n
+        - 中文智慧选字，关联字库功能修正\n\n
+
         5.0.5 版本更新\n\n
 
         - 新增键盘样式选择(黑色，请至设定变更)\n
