--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -231,6 +231,9 @@
         \n** 若文字無法正確輸入，建議您重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
 	    \n版本更新說明\n\n
 
+        5.1.0 版本更新\n\n
+
+
         5.0.6 版本更新\n\n
 
         - 軟體鍵盤固定候選字列 (移除浮動功能)\n
