--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -230,6 +230,11 @@
         \n** 若文字无法正确输入，建议您重新下载或汇入字根档案, 如果选字与送出的字不同，请关闭喜好设定的中文简/繁体字码转换.\n
         \n版本更新说明\n\n
 
+        5.1.0 版本更新\n\n
+
+        - 增加 EMOJI 图示\n
+        - 修正 Android 6 对话框显示问题\n\n
+
         5.0.6 版本更新\n\n
 
         - 软体键盘固定候选字列(移除浮动功能)\n
