--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -82,8 +82,15 @@
     <string name="setup_im_import_standard">汇入自定字根表</string>
     <string name="setup_im_import_reset">移除自定字根表</string>
     <string name="setup_im_import_related">汇入关联字库</string>
+    <string name="setup_im_import_related_default">汇入预设字库</string>
+    <string name="setup_im_import_related_default_confirm">请问您要汇入预设关联字库吗？</string>
     <string name="setup_im_restore_dropbox">Dropbox 还原</string>
     <string name="setup_im_restore_google">Google 还原</string>
+    <string name="setup_im_download_old">下载旧版程式</string>
+    <string name="setup_im_download_old_summary">旧版程式与新版不相容, 请您下载完成后移除目前安装的版本, 再至下载目录取得并安装旧版程式</string>
+    <string name="setup_im_download_old_version">下载 LIMEHD v3.9.1</string>
+    <string name="setup_im_download_old_version_confirm">请问您要下载 LIMEHD 3.9.1 版吗？</string>
+    <string name="setup_im_download_old_version_hint">档案下载路径：</string>
     <string name="setup_im_restore_local">本地还原</string>
 
     <string name="setup_im_load_custom">自定字根表</string>
@@ -176,6 +183,7 @@
     <string name="manage_related_loading">读取中 ...</string>
     <string name="manage_related_reset">重置</string>
     <string name="manage_related_duplicated">关联字重覆，无法储存</string>
+    <string name="manage_related_format_error">关联字建立错误，字码格式不支援</string>
 
     <string name="manage_related_dialog_edit">编辑内容</string>
     <string name="manage_related_dialog_message">请问是否要储存记录并离开?</string>
@@ -233,6 +241,9 @@
         5.1.0 版本更新\n\n
 
         - 增加 EMOJI 图示\n
+        - 新增汇入预设关联字库\n
+        - 简/繁体转换状态提示\n
+        - 旧版 LIME HD 下载功能\n
         - 修正 Android 6 对话框显示问题\n\n
 
         5.0.6 版本更新\n\n
