--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -82,8 +82,15 @@
     <string name="setup_im_import_standard">匯入自定字根表</string>
     <string name="setup_im_import_reset">移除自定字根表</string>
     <string name="setup_im_import_related">匯入關聯字庫</string>
+    <string name="setup_im_import_related_default">匯入預設字庫</string>
+    <string name="setup_im_import_related_default_confirm">請問您要匯入預設關聯字庫嗎?</string>
     <string name="setup_im_restore_dropbox">Dropbox 還原</string>
     <string name="setup_im_restore_google">Google 還原</string>
+    <string name="setup_im_download_old">下載舊版程式</string>
+    <string name="setup_im_download_old_summary">舊版程式與新版不相容, 請您下載完成後移除目前安裝的版本, 再至下載目錄取得並安裝舊版程式</string>
+    <string name="setup_im_download_old_version">下載 LIMEHD v3.9.1</string>
+    <string name="setup_im_download_old_version_confirm">請問您要下載 LIMEHD 3.9.1 版嗎?</string>
+    <string name="setup_im_download_old_version_hint">檔案下載路徑 :</string>
     <string name="setup_im_restore_local">本地還原</string>
 
     <string name="setup_im_load_custom">自定字根表</string>
@@ -177,6 +184,7 @@
     <string name="manage_related_loading">讀取中 ...</string>
     <string name="manage_related_reset">重置</string>
     <string name="manage_related_duplicated">關聯字重覆，無法儲存</string>
+    <string name="manage_related_format_error">關聯字建立錯誤，字碼格式不支援</string>
 
     <string name="manage_related_dialog_edit">編輯內容</string>
     <string name="manage_related_dialog_message">請問是否要儲存記錄並離開?</string>
@@ -234,6 +242,9 @@
         5.1.0 版本更新\n\n
 
         - 增加 EMOJI 圖示\n
+        - 新增匯入預設關聯字庫\n
+        - 簡/繁體轉換狀態提示\n
+        - 舊版 LIMEHD 下載功能\n
         - 修正 Android 6 對話框顯示問題\n\n
 
         5.0.6 版本更新\n\n
