--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -244,6 +244,7 @@
         - 新增汇入预设关联字库\n
         - 简/繁体转换状态提示\n
         - 旧版 LIME HD 下载功能\n
+        - 新增 BIG5 字集注音及仓颉字根\n
         - 修正 Android 6 对话框显示问题\n\n
 
         5.0.6 版本更新\n\n
