--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -245,6 +245,7 @@
         - 新增匯入預設關聯字庫\n
         - 簡/繁體轉換狀態提示\n
         - 舊版 LIMEHD 下載功能\n
+        - 新增 BIG5 字集注音及倉頡字根\n
         - 修正 Android 6 對話框顯示問題\n\n
 
         5.0.6 版本更新\n\n
