Fixed candidate view first suggestion word text width

--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -238,10 +238,15 @@
 
     <string name="help_dialog_title">使用说明</string>
     <string name="help_dialog_detail">
-        \n** 若文字无法正确输入，建议您重新下载或汇入字根档案, 如果选字与送出的字不同，请关闭喜好设定的中文简/繁体字码转换.\n
+        \n**若输入法运作异常请尝试透过[回复原始设定]功能进行资料及设定的修正。 \n
         \n版本更新说明\n\n
 
-        5.1.0 版本更新\n\n
+        5.1.1版本更新\n\n
+
+         - 回复原始设定\n
+         - 避免储存中文符号至关联字库\n\n
+
+        5.1.0版本更新\n\n
 
         - 增加 EMOJI 图示\n
         - 新增汇入预设关联字库\n
