--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -241,8 +241,13 @@
 
     <string name="help_dialog_title">使用說明</string>
     <string name="help_dialog_detail">
-        \n** 若文字無法正確輸入，建議您重新下載或匯入字根檔案, 如果選字與送出的字不同，請關閉喜好設定的中文簡/繁體字碼轉換.\n
-	    \n版本更新說明\n\n
+        \n** 若輸入法運作異常請嚐試透過 [回復原始設定] 功能進行資料及設定的修正. \n
+        \n版本更新说明\n\n
+
+        5.1.1 版本更新\n\n
+
+        - 回復原始設定\n
+        - 避免儲存中文符號至關聯字庫\n\n
 
         5.1.0 版本更新\n\n
 
