Add ","  @  and chinese space character to punctuation xml

--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -241,12 +241,13 @@
 
     <string name="help_dialog_title">使用說明</string>
     <string name="help_dialog_detail">
-        \n** 若輸入法運作異常請嚐試透過 [回復原始設定] 功能進行資料及設定的修正. \n
+        \n** 若輸入法運作異常請嚐試透過 [回復原始設定] 功能進行資料及設定的修正, 透過輸入法喜好設定關閉部份功能可提高輸入法運作效率。 \n
         \n版本更新说明\n\n
 
         5.1.1 版本更新\n\n
 
         - 回復原始設定\n
+        - 修正EMOJI查詢速度\n
         - 避免儲存中文符號至關聯字庫\n\n
 
         5.1.0 版本更新\n\n
@@ -269,20 +270,6 @@
         - 新增鍵盤樣式選擇 (黑色，請至設定變更)\n
         - 調整文字查詢效能\n
         - 修正許式注音\n\n
-
-        5.x 版本新功能\n\n
-
-        - 編輯輸入法字根\n
-        - 編輯關聯字庫\n
-        - 分享輸入法字庫\n
-        - 快速備份還原\n
-        - 更新雲端備份模組\n
-        - 備份選字順序及喜好設定\n
-        - 新增連打智慧選字\n
-        - 提升輸入法查詢效率\n
-        - 提升關聯字查詢效率\n
-        - 平面化輸入法鍵盤顯示\n
-        - 新增贊助、廣告移除模組\n\n
 
         感謝大易輸入法發明者王贊傑先生，萊姆正式獲得使用授權\n\n
 
