--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -238,12 +238,13 @@
 
     <string name="help_dialog_title">使用说明</string>
     <string name="help_dialog_detail">
-        \n**若输入法运作异常请尝试透过[回复原始设定]功能进行资料及设定的修正。 \n
+        \n**若输入法运作异常请尝试透过[回复原始设定]功能进行资料及设定的修正，透过输入法喜好设定关闭部份功能可提高输入法运作效率。 \n
         \n版本更新说明\n\n
 
         5.1.1版本更新\n\n
 
          - 回复原始设定\n
+         - 修正EMOJI查询速度\n
          - 避免储存中文符号至关联字库\n\n
 
         5.1.0版本更新\n\n
@@ -266,20 +267,6 @@
         - 新增键盘样式选择(黑色，请至设定变更)\n
         - 调整文字查询效能\n
         - 修正许式注音\n\n
-
-        5.x 版本新功能\n\n
-
-        - 编辑输入法字根\n
-        - 编辑关联字库\n
-        - 分享输入法字库\n
-        - 快速备份还原\n
-        - 更新云端备份模组\n
-        - 备份选字顺序及喜好设定\n
-        - 新增连打智慧选字\n
-        - 提升输入法查询效率\n
-        - 提升关联字查询效率\n
-        - 平面化输入法键盘显示\n
-        - 新增赞助、广告移除模组\n\n
 
         感谢大易输入法发明者王赞杰先生，莱姆正式获得使用授权\n\n
 
