Update version code and release notes

--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -246,6 +246,14 @@
         \n** 若輸入法運作異常請嚐試透過 [回復原始設定] 功能進行資料及設定的修正, 透過輸入法喜好設定關閉部份功能可提高輸入法運作效率。 \n
         \n版本更新说明\n\n
 
+        5.2.0 版本更新\n\n
+
+        - 修正浮動鍵盤顯示問題\n
+        - 修正選字列閃動及硬體鍵盤顯示\n
+        - 修正外部儲存空間權限問題\n
+        - 新增語音輸入快捷鍵\n
+        - 新增粉紅, 科技藍, 時尚紫及放鬆綠主題鍵盤\n\n
+
         5.1.1 版本更新\n\n
 
         - 回復原始設定\n
@@ -260,18 +268,6 @@
         - 舊版 LIMEHD 下載功能\n
         - 新增 BIG5 字集注音及倉頡字根\n
         - 修正 Android 6 對話框顯示問題\n\n
-
-        5.0.6 版本更新\n\n
-
-        - 軟體鍵盤固定候選字列 (移除浮動功能)\n
-        - 硬體鍵盤候選字列使用透明背景\n
-        - 中文智慧選字，關聯字庫功能修正\n\n
-
-        5.0.5 版本更新\n\n
-
-        - 新增鍵盤樣式選擇 (黑色，請至設定變更)\n
-        - 調整文字查詢效能\n
-        - 修正許式注音\n\n
 
         感謝大易輸入法發明者王贊傑先生，萊姆正式獲得使用授權\n\n
 
