--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -243,6 +243,14 @@
         \n**若输入法运作异常请尝试透过[回复原始设定]功能进行资料及设定的修正，透过输入法喜好设定关闭部份功能可提高输入法运作效率。 \n
         \n版本更新说明\n\n
 
+        5.2.0 版本更新\n\n
+
+        - 修正浮动键盘显示问题\n
+        - 修正选字列闪动及硬体键盘显示\n
+        - 修正外部储存空间权限问题\n
+        - 新增语音输入快捷键\n
+        - 新增粉红, 科技蓝, 时尚紫及放松绿主题键盘\n\n
+
         5.1.1版本更新\n\n
 
          - 回复原始设定\n
@@ -257,18 +265,6 @@
         - 旧版 LIME HD 下载功能\n
         - 新增 BIG5 字集注音及仓颉字根\n
         - 修正 Android 6 对话框显示问题\n\n
-
-        5.0.6 版本更新\n\n
-
-        - 软体键盘固定候选字列(移除浮动功能)\n
-        - 硬体键盘候选字列使用透明背景\n
-        - 中文智慧选字，关联字库功能修正\n\n
-
-        5.0.5 版本更新\n\n
-
-        - 新增键盘样式选择(黑色，请至设定变更)\n
-        - 调整文字查询效能\n
-        - 修正许式注音\n\n
 
         感谢大易输入法发明者王赞杰先生，莱姆正式获得使用授权\n\n
 
