Formal release version 5.2.1 - 526

--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings.xml
@@ -243,6 +243,8 @@
         \n**若输入法运作异常请尝试透过[回复原始设定]功能进行资料及设定的修正，透过输入法喜好设定关闭部份功能可提高输入法运作效率。 \n
         \n版本更新说明\n\n
 
+        5.2.1问题修正\ n\ n
+
         5.2.0 版本更新\n\n
 
         - 修正浮动键盘显示问题\n
