--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -246,6 +246,8 @@
         \n** 若輸入法運作異常請嚐試透過 [回復原始設定] 功能進行資料及設定的修正, 透過輸入法喜好設定關閉部份功能可提高輸入法運作效率。 \n
         \n版本更新说明\n\n
 
+        5.2.1 問題修正\n\n
+
         5.2.0 版本更新\n\n
 
         - 修正浮動鍵盤顯示問題\n
